# inspection-system

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 69c4beca_initial_schema.py
api/: database.py  main.py  models.py  schemas.py  websocket.py
api/routers/: jobs.py  reports.py
checks/base/phase2_sw_basic/: sw_cpu.py  sw_cpu.sh  sw_gpu.py  sw_gpu.sh  sw_memory.py  sw_memory.sh  sw_network.py  sw_network.sh  sw_storage.py  sw_storage.sh
checks/base/phase3_os_config/: sw_auto_update.py  sw_auto_update.sh  sw_power_mgmt.py  sw_power_mgmt.sh
checks/base/phase4_stress/: stress_cpu.py  stress_cpu.sh  stress_gpu.py  stress_gpu.sh
checks/base/phase5_nccl/: nccl_bandwidth.py  nccl_bandwidth.sh
checks/base/phase6_sw_install/: sw_os_version.py  sw_os_version.sh
checks/base/phase7_collect/: collect_all_logs.py  collect_all_logs.sh
checks/profiles/: default.json  gpu_server.json
config/: celeryconfig.py  settings.py
config/prompts/: validation_gpu_server.txt
scripts/: daily_check.sh  deploy.sh  setup-branch-protection.sh  setup-server.sh
templates/: report.html.j2  report.tex.j2
tests/test_api/: test_health.py  test_reports.py  test_websocket.py
tests/test_checks/: test_nccl.py  test_stress_cpu.py  test_stress_gpu.py
tests/test_workers/: test_inspect.py  test_report.py  test_validate.py
workers/: app.py  inspect.py  notify.py  report.py  validate.py
